<resources>
    <string name="app_name">Find Indonesia Tourism</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="titlesplash">Find Indonesia Tourism</string>
    <string name="mainMessageTextView">Explore and get information on your travel destination easily.</string>
    <string name="loginMessageTextView">Please fill in the account login form to use this application.</string>
    <string name="registerMessageTextView">Please fill in the account registration form to become a user of this application.</string>
    <string name="username">Username</string>
    <string name="email">Email address</string>
    <string name="password">Password</string>
    <string name="phone">Phone number</string>
    <string name="usernamehint">Fill in your username</string>
    <string name="emailhint">Fill in your email address</string>
    <string name="passwordhint">Fill in your password</string>
    <string name="phonehint">Fill in your number phone</string>
    <string name="messagedonthaveaccountmain">Don\'t have an account yet?</string>
    <string name="messagedonthaveaccount">Don\'t have an account yet? <b>Sign Up</b></string>
    <string name="messagehaveaccountmain">Already have an account?</string>
    <string name="messagehaveaccount">Already have an account? <b>Sign In</b></string>
    <string name="register">Register</string>
    <string name="or">Or</string>
    <string name="login">Login</string>
    <string name="fill_in">Fill In</string>
    <string name="populerDestination">Popular Destination</string>
    <string name="signup">Sign Up</string>
    <string name="signin">Sign In</string>
    <string name="home">Home</string>
    <string name="homeview">Home View</string>
    <string name="explore">Explore</string>
    <string name="exploreview">Explore View</string>
    <string name="category">Categories</string>
    <string name="categoryview">Categories View</string>
    <string name="favorite">Favorite</string>
    <string name="favoriteview">Favorite View</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="profileview">Profile View</string>
    <string name="language">Language</string>
    <string name="logout">Logout</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_confirm">Logout Confirmation</string>
    <string name="confirm">Are you sure you want to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="logo_find_indonesia_tourism">Logo Find Indonesia Tourism</string>
    <string name="slider">Slider</string>
    <string name="be_patient">Be patient…</string>
    <string name="full_name">Full name</string>
    <string name="fill_in_your_full_name">Fill in your full name</string>
    <string name="fitdevteam_bangkit_academy">fitdevteam@bangkit.academy</string>
    <string name="number_phone">081xxxxxxxxx</string>
    <string name="username_or_email_address">Username or email address</string>
    <string name="fill_in_your_username_or_email_address">Fill in your username or email address</string>
    <string name="region_image">Region Image</string>
    <string name="welcome_to_find_indonesia_tourism_app">Welcome to Find Indonesia Tourism App!</string>
    <string name="region">Region</string>
    <string name="popular">Popular</string>
    <string name="recommendation">Recommendation</string>
    <string name="region_name">Region Name</string>
    <string name="_17_destinations">17 Destinations</string>
    <string name="background_content">Background Content</string>
    <string name="message_title_category">Indonesian Tourism Categories</string>
    <string name="category_name">Category Name</string>
    <string name="beaches">Beaches</string>
    <string name="lakes">Lakes</string>
    <string name="waterfall">Waterfall</string>
    <string name="mountains">Mountains</string>
    <string name="message_title_explore">Explore Your Travel Destination</string>
    <string name="message_title_favorite">My Favorite Travel Destinations</string>
    <string name="rating">Rating</string>
    <string name="message_profile">Please change in the profile settings from to user profile data.</string>
    <string name="save_changes">Save Changes</string>
    <string name="type_in_the_destination_you_want">Type in the destination you want</string>
    <string name="showing_120_tourist_destinations_in_kalimantan">Showing 120 tourist destinations in Kalimantan</string>
    <string name="beach">Beach</string>
    <string name="nearby">Nearby</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="details">Details</string>
    <string name="monday_6_00_am_6_00_pm">Monday: 6:00 AM – 6:00 PM</string>
    <string name="pantai_tiga_warna_malang">Malang Three Color Beach</string>
    <string name="place_status">Place Status</string>
    <string name="opening_days_and_hours">Opening Days and Hours</string>
    <string name="address">Address</string>
    <string name="maps">Maps</string>
    <string name="more_information">More Information</string>
    <string name="accommodation_and_lodging">Accommodation and Lodging</string>
    <string name="more_photos">More Photos</string>
    <string name="reviews">Reviews</string>
    <string name="open_now">Open Now</string>
    <string name="gunung_kupang_kec_curah_dami_kabupaten_bondowoso_jawa_timur_68251_indonesia">Gunung, Kupang, Kec. Curah Dami, Kabupaten Bondowoso, Jawa Timur 68251, Indonesia</string>
    <string name="add_to_my_favorite">Add to My Favorite</string>
</resources>