<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Background"
    tools:context="com.fitdev.findindonesiatourism.ui.activity.register.RegisterActivity">

    <ImageView
        android:id="@+id/register_app_logo"
        android:layout_width="109dp"
        android:layout_height="113dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/logo_find_indonesia_tourism" />

    <TextView
        android:id="@+id/register_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center"
        android:text="@string/titlesplash"
        android:textColor="@color/Primary"
        android:textSize="21sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_app_logo" />

    <TextView
        android:id="@+id/register_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/registerMessageTextView"
        android:textColor="@color/Primary"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_app_name" />

    <TextView
        android:id="@+id/register_label_fullname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/poppins_semibold"
        android:labelFor="@id/register_input_fullname"
        android:text="@string/username"
        android:textColor="@color/Primary"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_message" />

    <EditText
        android:id="@+id/register_input_fullname"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_username"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="@font/poppins_regular"
        android:hint="@string/usernamehint"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingStart="12dp"
        android:textColor="@color/Primary"
        android:textColorHint="@color/Primary"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.317"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_label_fullname"
        tools:ignore="LabelFor,RtlSymmetry" />

    <TextView
        android:id="@+id/register_label_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/poppins_semibold"
        android:labelFor="@id/register_input_email"
        android:text="@string/email"
        android:textColor="@color/Primary"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_input_fullname" />

    <EditText
        android:id="@+id/register_input_email"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="@font/poppins_regular"
        android:hint="@string/emailhint"
        android:importantForAutofill="no"
        android:inputType="text|textEmailAddress"
        android:paddingStart="12dp"
        android:textColor="@color/Primary"
        android:textColorHint="@color/Primary"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_label_email"
        tools:ignore="LabelFor,RtlSymmetry" />

    <TextView
        android:id="@+id/register_label_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/poppins_semibold"
        android:labelFor="@id/register_input_password"
        android:text="@string/password"
        android:textColor="@color/Primary"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_input_email" />

    <EditText
        android:id="@+id/register_input_password"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="@font/poppins_regular"
        android:hint="@string/passwordhint"
        android:importantForAutofill="no"
        android:inputType="text|textPassword"
        android:paddingStart="12dp"
        android:textColor="@color/Primary"
        android:textColorHint="@color/Primary"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_label_password"
        tools:ignore="LabelFor,RtlSymmetry" />

    <TextView
        android:id="@+id/register_label_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/poppins_semibold"
        android:labelFor="@id/register_input_phone"
        android:text="@string/phone"
        android:textColor="@color/Primary"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_input_password" />

    <EditText
        android:id="@+id/register_input_phone"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_phone"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="@font/poppins_regular"
        android:hint="@string/phonehint"
        android:importantForAutofill="no"
        android:inputType="number"
        android:paddingStart="12dp"
        android:textColor="@color/Primary"
        android:textColorHint="@color/Primary"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_label_phone"
        tools:ignore="LabelFor,RtlSymmetry,TextFields" />

    <TextView
        android:id="@+id/register_hyperlink_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="8dp"
        android:text="@string/messagehaveaccount"
        android:textColor="@color/Primary"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/Primary"
        android:fontFamily="@font/poppins_semibold"
        android:paddingVertical="10dp"
        android:text="@string/signup"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="21sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.207"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>