<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Background"
    tools:context="com.fitdev.findindonesiatourism.ui.activity.main.MainActivity">

    <ImageView
        android:id="@+id/main_app_logo"
        android:layout_width="109dp"
        android:layout_height="113dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/logo_find_indonesia_tourism"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/main_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center"
        android:text="@string/titlesplash"
        android:textColor="@color/Primary"
        android:textSize="21sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_app_logo" />

    <TextView
        android:id="@+id/main_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/mainMessageTextView"
        android:textColor="@color/Primary"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_app_name" />

    <TextView
        android:id="@+id/main_label_slider"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/populerDestination"
        android:textColor="@color/Primary"
        android:textSize="21sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_message" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/main_slider"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/main_label_sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_label_slider" />

    <LinearLayout
        android:id="@+id/main_slider_dots"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_slider" />

    <TextView
        android:id="@+id/main_label_sign_up"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/messagedonthaveaccountmain"
        android:textColor="@color/Primary"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/main_btn_sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/main_label_sign_in"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/messagehaveaccountmain"
        android:textColor="@color/Primary"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/main_btn_sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/main_btn_sign_up"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="55dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/Secondary"
        android:fontFamily="@font/poppins_semibold"
        android:paddingVertical="10dp"
        android:text="@string/signup"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="21sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/main_label_sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/main_line_left"
        android:layout_width="114dp"
        android:layout_height="3dp"
        android:layout_marginBottom="24dp"
        android:background="@color/Primary"
        app:layout_constraintBottom_toTopOf="@+id/main_label_sign_in"
        app:layout_constraintEnd_toStartOf="@+id/main_or"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/main_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:fontFamily="@font/proppins"
        android:gravity="center"
        android:text="@string/or"
        android:textColor="@color/Primary"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/main_label_sign_in"
        app:layout_constraintEnd_toStartOf="@+id/main_line_right"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/main_line_left" />

    <View
        android:id="@+id/main_line_right"
        android:layout_width="114dp"
        android:layout_height="3dp"
        android:layout_marginBottom="24dp"
        android:background="@color/Primary"
        app:layout_constraintBottom_toTopOf="@+id/main_label_sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/main_or" />

    <Button
        android:id="@+id/main_btn_sign_in"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/Primary"
        android:fontFamily="@font/poppins_semibold"
        android:paddingVertical="10dp"
        android:text="@string/signin"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="21sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>